[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/roll_button.gd" type="Script" id=1]

[node name="roll" type="Button"]
margin_right = 163.0
margin_bottom = 24.0
text = "ROLAR DADO"
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 312.0
margin_top = 224.0
margin_right = 712.0
margin_bottom = 392.0
rect_pivot_offset = Vector2( -96, -64 )
popup_exclusive = true
window_title = "Rolador"

[node name="sides" type="LineEdit" parent="WindowDialog"]
margin_left = 8.0
margin_top = 105.0
margin_right = 66.0
margin_bottom = 129.0

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 74.0
margin_top = 112.0
margin_right = 82.0
margin_bottom = 126.0
text = "+"

[node name="mod" type="LineEdit" parent="WindowDialog"]
margin_left = 88.0
margin_top = 104.0
margin_right = 146.0
margin_bottom = 128.0

[node name="Label2" type="Label" parent="WindowDialog"]
margin_left = 16.0
margin_top = 88.0
margin_right = 60.0
margin_bottom = 102.0
text = "LADOS"

[node name="roll_button" type="Button" parent="WindowDialog"]
margin_left = 34.0
margin_top = 136.0
margin_right = 122.0
margin_bottom = 161.0
text = "ROLAR"

[node name="quant" type="LineEdit" parent="WindowDialog"]
margin_left = 8.0
margin_top = 24.0
margin_right = 66.0
margin_bottom = 48.0

[node name="Label3" type="Label" parent="WindowDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 39.0
text = "QUANT"

[node name="Label4" type="Label" parent="WindowDialog"]
margin_left = 96.0
margin_top = 88.0
margin_right = 140.0
margin_bottom = 102.0
text = "MOD"

[node name="Label5" type="Label" parent="WindowDialog"]
margin_left = 230.0
margin_top = 8.0
margin_right = 318.0
margin_bottom = 39.0
text = "HISTORICO
"

[node name="Panel" type="Panel" parent="WindowDialog"]
margin_left = 152.0
margin_top = 24.0
margin_right = 392.0
margin_bottom = 128.0
size_flags_stretch_ratio = 20.0

[node name="VScrollBar" type="ScrollContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = 24.0
margin_right = -8.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/VScrollBar"]
margin_right = 232.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="historico" type="Label" parent="WindowDialog/VScrollBar/VBoxContainer"]
margin_right = 232.0
margin_bottom = 104.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="clear" type="Button" parent="WindowDialog"]
margin_left = 226.0
margin_top = 136.0
margin_right = 314.0
margin_bottom = 161.0
text = "CLEAR"

[connection signal="pressed" from="." to="." method="_on_roll_pressed"]
[connection signal="pressed" from="WindowDialog/roll_button" to="." method="_on_roll_button_pressed"]
[connection signal="pressed" from="WindowDialog/clear" to="." method="_on_clear_pressed"]
